test/sema/exercise/struct_in_declref.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
}

fn foo(s: S): number {
  return s.x;
}

fn main(): void {
  foo(S);
  // CHECK: [[# @LINE - 1 ]]:7: error: expected value, but received type 'S'
}
